--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bhuwanepali.github.io/my-portfolio",
   "name": "my-portafolio-site",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "gh-pages": "^5.0.0",
     "jquery": "^3.6.0",
     "js-file-download": "^0.4.12",
     "react": "^18.1.0",
@@ -22,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
